--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "dist/src/index.js",
   "license": "MIT",
   "dependencies": {
+    "@socket.io/redis-adapter": "^7.1.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "redis": "^4.0.3",
+    "socket.io": "^4.4.1"
   },
   "scripts": {
     "build": "tsc",
@@ -26,5 +29,9 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.8"
   }
 }
