--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "build": "tsc",
     "start": "node .",
     "dev": "concurrently  \"tsc -w\" \"nodemon .\"",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@internxt/eslint-config-internxt": "^1.0.4",
     "@internxt/prettier-config": "^1.0.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.18",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "concurrently": "^7.0.0",
     "eslint": "^8.9.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "optionalDependencies": {
