--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "redis": "^4.0.3",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "winston": "^3.6.0"
   },
   "scripts": {
     "build": "tsc",
