--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,7 +29,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/notifications:${{ github.sha }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/notifications:${{ github.sha }},${{ secrets.DOCKERHUB_USERNAME }}/notifications:latest
   deploy:
     needs: build
     runs-on: ubuntu-latest
